# RustSenso

./: .gitignore  Cargo.toml  LICENSE  README.md  secret.sample
.cargo/: config.toml
grafana/: Power and Yield-1679648405401.json  Temperature-1679648423739.json  data.db.bk
scripts/: build.sh  build_x86.sh  instruments_alloc.sh  run.sh  run_cargo.sh  test.sh
senso/: Cargo.toml
senso/src/: array2d.rs  connector.rs  db.rs  lib.rs  request.rs  response.rs  urls.rs  yp.rs
senso/tests/: connector_test.rs
senso/tests/responses/: emf_devices.json  emf_report_device.json  live_report2.json
senso/tests/responses/emf_report/: ch_bo_p.json  ch_hp_p.json  ch_hp_y.json  hw_bo_p.json  hw_hp_p.json  hw_hp_y.json
sensor/: Cargo.toml
sensor/src/: main.rs
src/: main.rs
src/senso/: connector.rs  db.rs  mod.rs  response.rs  urls.rs
tests/: connector_test.rs
tests/responses/: live_report.json  status.json  status2.json
usage/: Cargo.toml
usage/src/: main.rs
