[package]
name = "senso"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["default", "derive"] }
thiserror = "1.0.39"
ureq = { version="2.6.2", features = ["default", "cookies", "json"]}
chrono = {version = "0.4.24", features = ["default", "serde"] }
iso8601-timestamp = "0.2.10"
rusqlite = { version = "0.28.0", features = ["bundled"] }
strum_macros = "0.24.3"
itertools = "0.10.5"
cli-table = "0.4.7"


[dev-dependencies]
env_logger = "0.10.0"
mockito = "1.0.0"
