[package]
name = "sensor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
senso = { path = "../senso" }
const_format = "0.2.30"
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.1.8", features = ["derive"] }